k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: lms
  labels:
    name: lms
    environment: production
